# src/swagger.json
@@ -576,6 +576,17 @@
       "get": {
         "summary": "Get unique cities",
         "tags": ["Destination"],
+        "parameters": [
+          {
+            "name": "location",
+            "in": "query",
+            "description": "Optional. Filter destinations by location.",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "Success",
